--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>webapp</title>
 </head>
 <body>
-<script src="build/common.js.js"></script>
-<script src="build/index.js"></script>
+<script src="prd/build.js"></script>
 </body>
 </html>
